--- a/Module-4/nav.css
+++ b/Module-4/nav.css
@@ -1,6 +1,7 @@
 nav > ul{
     display: flex;
 }
+
 nav li{
     list-style: none;
     margin-right: 10px;
@@ -14,4 +15,17 @@ nav li:hover{
 nav li a{
     text-decoration: none;
     color: black;
+}
+
+/* nested menu styles */
+
+nav li .dropdown{
+    display: none;
+    position: absolute;
+    background-color: lightyellow;
+    padding-left: 10px;
+}
+
+nav li:hover .dropdown{
+    display: block;
 }
