--- a/Module-5/style.css
+++ b/Module-5/style.css
@@ -27,6 +27,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 nav > ul{
@@ -42,4 +43,12 @@ nav li{
 nav a{
     text-decoration: none;
     color: #474747;
+}
+/* header related styles */
+.header{
+    background-color: #fff8f3;
+}
+
+.banner{
+    padding: 30px 30 px 30px 150px;
 }
