--- a/Module-5/style.css
+++ b/Module-5/style.css
@@ -47,8 +47,36 @@ nav a{
 /* header related styles */
 .header{
     background-color: #fff8f3;
+    background-image: url('images/header_bg.png');
+    background-repeat: no-repeat;   
+    background-position: bottom right;
 }
 
 .banner{
-    padding: 30px 30 px 30px 150px;
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.banner-content{
+    max-width: 500px;
+    margin-left: 50px;
+}
+.banner .profile-picture{
+    width: 500px;
+}
+.banner-greeting{
+    font-size: 45px;
+    color:#474747;
+    margin-bottom: 0;
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.banner-description{
+    font-size: 16px;
+    padding-bottom: 6px;
 }
