--- a/Module-5/style.css
+++ b/Module-5/style.css
@@ -16,6 +16,20 @@ body{
     font-weight: 700;
     padding: 15px 35px;
 }
+
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
+
 /* nav related styles */
 .nav-title{
     color: #181818;
@@ -79,4 +93,14 @@ nav a{
 .banner-description{
     font-size: 16px;
     padding-bottom: 6px;
+}
+
+/* main section styles */
+
+/* about section styles */
+.about{
+    padding: 130px;
+    background-color: #fff8f3;
+    border-radius: 10px;
+    margin: 130px;
 }
