--- a/Module-5/style.css
+++ b/Module-5/style.css
@@ -96,6 +96,17 @@ nav a{
 }
 
 /* main section styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
 
 /* about section styles */
 .about{
