--- a/Module-5/style.css
+++ b/Module-5/style.css
@@ -108,6 +108,9 @@ main{
     text-align: center;
 }
 
+#what-i-do-description{
+    padding: 30px 150px;
+}
 /* about section styles */
 .about{
     padding: 130px;
