--- a/Module-5/style.css
+++ b/Module-5/style.css
@@ -100,6 +100,12 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+
+main section{
+    margin-top: 130px;
+}
+
+/* about section */
 .about-info-container{
     display: flex;
     justify-content: space-around;
@@ -117,4 +123,23 @@ main{
     background-color: #fff8f3;
     border-radius: 10px;
     margin: 130px;
+}
+/* skill related styles */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-title{
+    font-size: 25px;
+    
+}
+.skill-description{
+    font-size: 16px;
+    color: #757575;
 }
