--- a/Module-5/style.css
+++ b/Module-5/style.css
@@ -143,3 +143,14 @@ main section{
     font-size: 16px;
     color: #757575;
 }
+
+/* resume styles  */
+
+.resume-container{
+    
+}
+.resume-column-title{
+    font-size: 30px;
+    color: #474747;
+    font-weight: 700;
+}
