resume  section style added

--- a/Module-5/style.css
+++ b/Module-5/style.css
@@ -155,3 +155,6 @@ main section{
     color: #474747;
     font-weight: 700;
 }
+.resume-item-description, .resume-item-info{
+    color: #757575;
+}
