--- a/Module-5/style.css
+++ b/Module-5/style.css
@@ -165,3 +165,12 @@ main section{
 .resume-item-info{
     color: #757575;
 }
+
+.resume-container hr{
+    margin: 30px;
+}
+
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
